--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -12,6 +12,32 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <title>My Portfolio</title>
+
+<style>
+  body{
+    background-color: bisque;
+  }
+
+  *{
+    padding: 0;
+    margin: 0;
+    font-family: 'josefin sans', sans-serif;
+    box-sizing: border-box ;
+  }
+.logo{
+  color: wheat;
+  font-size: 25px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  float: right;
+}
+  span{
+    color: red;
+  }
+
+  
+
+</style>
 <body>
 
     <!-- Navigation Bar -->
@@ -28,6 +54,7 @@
             <li><a href="/services"> services</a></li>
             <li><a href="/contact"> contact</a></li>
       </ul>
+      <h2 class="logo"> TRIG<span>GER</span></h2>
     </div>
 </nav>
 
@@ -35,7 +62,7 @@
 <!-- Main Content -->
 <div class="jumbotron text-center">
     <h1>Jide's Responsive Website </h1>
-    <p>"When the TIME is right, The LORD will make it happen"</br>
+    <p>"Story for the Gods!! "</br>
   
     Isiah 60:22
     </p> 
@@ -46,7 +73,7 @@
       <div class="col-sm-4">
         <h3>Personal Profile</h3>
         Name:</br>
-        <p>Roy</p>
+        <p>Jide</p>
         Program: </br>
         <p>Software Engineering Technician</p>
         Sport:</br>
@@ -54,12 +81,12 @@
     
       </div>
       <div class="col-sm-4">
-        <h3>Column 2</h3>
+        <h3>Web developmet</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
       </div>
       <div class="col-sm-4">
-        <h3>Column 3</h3>        
+        <h3>Projects</h3>        
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
       </div>
