--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -37,6 +37,7 @@
 
   
 
+
 </style>
 <body>
 
@@ -61,37 +62,16 @@
 
 <!-- Main Content -->
 <div class="jumbotron text-center">
-    <h1>Jide's Responsive Website </h1>
+    <h1>Babajide's Portfolio Website </h1>
     <p>"Story for the Gods!! "</br>
   
-    Isiah 60:22
+    i’m currently learning Frontend frameworks (React and Vue), SQL, AWS Cloud Computing, FullStack development
     </p> 
   </div>
     
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-4">
-        <h3>Personal Profile</h3>
-        Name:</br>
-        <p>Jide</p>
-        Program: </br>
-        <p>Software Engineering Technician</p>
-        Sport:</br>
-        Basketball
-    
-      </div>
-      <div class="col-sm-4">
-        <h3>Web developmet</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-      </div>
-      <div class="col-sm-4">
-        <h3>Projects</h3>        
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-      </div>
-    </div>
-  </div>
+
+
+
   
 </body>
 </head>
