--- a/views/services.ejs
+++ b/views/services.ejs
@@ -14,7 +14,7 @@
 
 <style>
     body{
-      background-color: bisque;
+      background-color: #555;
     }
   
     *{
@@ -33,7 +33,78 @@
     span{
       color: red;
     }
-  
+    
+
+    .service {
+         background: #101010;
+         width: 100%;
+         padding: 100px 0px;
+     }
+
+     .title h2{
+         color: white;
+         font-size: 75px;
+         width: 1130px;
+         margin: 30px auto;
+         text-align: center;
+     }
+
+     .box{
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         min-height: 400px;
+     }
+
+     .card{
+         height: 365px;
+         width: 335px;
+         padding: 20px 35px;
+         background: #191919;
+         border-radius: 20px;
+         margin: 15px;
+         position: relative;
+         overflow: hidden;
+         text-align: center;
+     }
+
+     .card i {
+         font-size: 50px;
+         display: block;
+         text-align: center;
+         margin: 25px 0px;
+         color: #f9004d;
+     }
+
+     h5{
+         color: white;
+         font-size: 23px;
+         margin-bottom: 15px;
+     }
+
+     .pra p{
+         color: #fcfc;
+         font-size: 16px;
+         line-height: 27px;
+         margin-bottom: 25px;
+     }
+
+     .card .button {
+        background-color: #f9004d;
+        color: white;
+        text-decoration: none;
+        border: 2px solid transparent;
+        font-weight: bold;
+        padding: 8px 21px;
+        border-radius: 30px;
+        transition: transform .4s;
+     }
+
+     .card .button:hover{
+        background-color: transparent;
+        border: 2px solid #f9004d;
+        cursor: pointer;
+     }
     
   
   </style>
@@ -46,7 +117,7 @@
           </div>
     
           <ul class="nav navbar-nav">
-                <li><a class="active" href="/index"> Home</a></li>
+                <li><a class="active" href="/Home"> Home</a></li>
                 <li><a  href="/about"> About me</a></li>
                 <li><a href="/projects"> projects</a></li>
                 <li><a href="/services"> services</a></li>
@@ -55,6 +126,57 @@
           <h2 class="logo"> TRIG<span>GER</span></h2>
         </div>
     </nav>
+
+
+
+    <!-- service section -->
+<div class="service">
+  <div class="title">
+      <h2>My Services</h2>
+  </div>
+
+  <div class="box">
+      <div class="card">
+          <i class="fa-solid fa-bars"></i>
+          <h5>Web Development</h5>
+          <div class="pra">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, odio.
+                  Saepe eligendi mollitia nam. Commodi sunt quas vero fuga asperiores.</p>
+
+              <p style="text-align: center;">
+                  <a class="button" href="#">Read More</a>
+              </p>
+          </div>
+      </div>
+
+      <div class="card">
+          <i class="fa-solid fa-user-astronaut"></i>
+          <h5>Web Development</h5>
+          <div class="pra">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, odio.
+                  Saepe eligendi mollitia nam. Commodi sunt quas vero fuga asperiores.</p>
+
+              <p style="text-align: center;">
+                  <a class="button" href="#">Read More</a>
+              </p>
+          </div>
+      </div>
+
+      <div class="card">
+          <i class="fa-solid fa-bell"></i>
+          <h5>Web Development</h5>
+          <div class="pra">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, odio.
+                  Saepe eligendi mollitia nam. Commodi sunt quas vero fuga asperiores.</p>
+
+              <p style="text-align: center;">
+                  <a class="button" href="#">Read More</a>
+              </p>
+          </div>
+      </div>
+  </div>
+</div>
+
 
 </body>
 </head>
