--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -14,15 +14,14 @@
 <title>My Portfolio</title>
 
 <style>
-  body{
-    background-color: bisque;
-  }
+   
 
   *{
     padding: 0;
     margin: 0;
     font-family: 'josefin sans', sans-serif;
     box-sizing: border-box ;
+    
   }
 .logo{
   color: wheat;
@@ -32,9 +31,14 @@
   float: right;
 }
   span{
-    color: red;
+    color: #f9004d;
   }
 
+  body{
+    background-image:url(/dark-background.jpg);
+    background-size: contain;
+  }  
+    
   
 
 
@@ -47,7 +51,7 @@
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Babajide's Portfolio</a>
       </div>
-
+        
       <ul class="nav navbar-nav">
             <li><a class="active" href="/index"> Home</a></li>
             <li><a  href="/about"> About me</a></li>
@@ -62,7 +66,7 @@
 
 <!-- Main Content -->
 <div class="jumbotron text-center">
-    <h1>Babajide's Portfolio Website </h1>
+    <h1 style="color: #f9004d;">Babajide's Portfolio Website </h1>
     <p>"Story for the Gods!! "</br>
   
     i’m currently learning Frontend frameworks (React and Vue), SQL, AWS Cloud Computing, FullStack development
