--- a/views/services.ejs
+++ b/views/services.ejs
@@ -14,7 +14,7 @@
 
 <style>
     body{
-      background-color: #555;
+      background-color: #f9004d;
     }
   
     *{
@@ -139,7 +139,9 @@
       <div class="card">
           <i class="fa-solid fa-bars"></i>
           <h5>Web Development</h5>
+          
           <div class="pra">
+            <img src="/CE0060b.png" height="120px" width="120px">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, odio.
                   Saepe eligendi mollitia nam. Commodi sunt quas vero fuga asperiores.</p>
 
@@ -151,8 +153,9 @@
 
       <div class="card">
           <i class="fa-solid fa-user-astronaut"></i>
-          <h5>Web Development</h5>
+          <h5>Responsive Website</h5>
           <div class="pra">
+            <img src="/responsiveweb-01.png" height="120px" width="120px">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, odio.
                   Saepe eligendi mollitia nam. Commodi sunt quas vero fuga asperiores.</p>
 
@@ -163,9 +166,26 @@
       </div>
 
       <div class="card">
+        <i class="fa-solid fa-user-astronaut"></i>
+        <h5>Data Analysis</h5>
+        <div class="pra">
+            <img src="/dataanalysisistockrobuart.jpg" height="120px" width="120px">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, odio.
+                Saepe eligendi mollitia nam. Commodi sunt quas vero fuga asperiores.</p>
+
+            <p style="text-align: center;">
+                <a class="button" href="#">Read More</a>
+            </p>
+        </div>
+    </div>
+
+
+
+      <div class="card">
           <i class="fa-solid fa-bell"></i>
-          <h5>Web Development</h5>
+          <h5>Product Management</h5>
           <div class="pra">
+            <img src="/product-mangement-lifecycle.jpg" height="120px" width="120px">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, odio.
                   Saepe eligendi mollitia nam. Commodi sunt quas vero fuga asperiores.</p>
 
