--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,9 +14,11 @@
 
 <style>
     body{
-      background-color: rgb(80, 137, 149);
+      background-color:#f9004d;
     }
   
+    
+
     *{
       padding: 0;
       margin: 0;
@@ -42,7 +44,7 @@
 
     .about img{
         height: auto;
-        width: 430px;
+        width: 400px;
         border-radius: 10px;
     }
 
@@ -126,7 +128,7 @@
 
     <section class="about">
         <div class="main">
-            <img src="../Logo/">
+            <img src="/jide.png">
             <div class="about-text">
                 <h2>About Me</h2>
                 <h5>Developer & <span>Designer</span> </h5>
