--- a/views/about.ejs
+++ b/views/about.ejs
@@ -119,7 +119,7 @@
                 <li><a href="/services"> services</a></li>
                 <li><a href="/contact"> contact</a></li>
           </ul>
-          <h2 class="logo"> TRIG<span>GER</span></h2>
+          <h2 class="logo">DEV<span>TRIGGZ</span></h2>
         </div>
     </nav>
 
@@ -131,10 +131,10 @@
             <img src="/jide.png">
             <div class="about-text">
                 <h2>About Me</h2>
-                <h5>Developer & <span>Designer</span> </h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
-                    voluptatum recusandae perferendis ad tempora quaerat
-                    autem illum voluptate consequuntur cum, sed placeat quo soluta at!</p>
+                <h5>FullStack Developer & <span>MultiMedia Producer</span> </h5>
+                <p>My name is Babajide Aroyewun, a Software Engineering Technician Student at Centennial College. I’m currently learning Frontend frameworks (React and Vue), SQL, Python for Visualization, 
+                    AWS Cloud Computing and FullStack development. I’m currently working on renaissance man (The Blog).
+                     you can ask me about Software Development, MERN Stack, REACT.JS, AWS Cloud Computing</p>
                 <button type="button">Lets Talk </button>
             </div>
         </div>
