--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -151,7 +151,7 @@
                 <li><a href="/services"> services</a></li>
                 <li><a href="/contact"> contact</a></li>
           </ul>
-          <h2 class="logo"> TRIG<span>GER</span></h2>
+          <h2 class="logo">DEV<span>TRIGGZ</span></h2>
         </div>
     </nav>
 
@@ -175,7 +175,7 @@
       <label for="Email">E-mail:</label><br>
       <input type="text" id="Email" name="Email"><br><br>
       <textarea name="message" rows="15" cols="30">
-      Write your message here, We care. 
+      Write your message here, i care. 
         </textarea>
        <br>
       <input type="submit">
@@ -217,7 +217,7 @@
 
     <!--Footer -->
     <footer>
-        <p>Babajide Olawale</p>
+        <p>Babajide Aroyewun</p>
         <p>For more HTML, CSS, and more coding tutorial -
             please click on the link below to subscribe to my channel</p>
         <div class="social">
@@ -225,7 +225,7 @@
             <a href="#"><i class="fa-brands fa-github-square"></i></a>
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
         </div>
-        <p class="end">CopyRight By Triggzz</p>
+        <p class="end">CopyRight By Dev Triggz</p>
     </footer>
 
 
