--- a/views/services.ejs
+++ b/views/services.ejs
@@ -123,14 +123,14 @@
                 <li><a href="/services"> services</a></li>
                 <li><a href="/contact"> contact</a></li>
           </ul>
-          <h2 class="logo"> TRIG<span>GER</span></h2>
+          <h2 class="logo"> DEV<span>TRIGGZ</span></h2>
         </div>
     </nav>
 
 
 
     <!-- service section -->
-<div class="service">
+  <div class="service">
   <div class="title">
       <h2>My Services</h2>
   </div>
@@ -142,8 +142,7 @@
           
           <div class="pra">
             <img src="/CE0060b.png" height="120px" width="120px">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, odio.
-                  Saepe eligendi mollitia nam. Commodi sunt quas vero fuga asperiores.</p>
+              <p>i Provide Web Development Services</p>
 
               <p style="text-align: center;">
                   <a class="button" href="#">Read More</a>
@@ -156,8 +155,7 @@
           <h5>Responsive Website</h5>
           <div class="pra">
             <img src="/responsiveweb-01.png" height="120px" width="120px">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, odio.
-                  Saepe eligendi mollitia nam. Commodi sunt quas vero fuga asperiores.</p>
+              <p>i create Responsive Websites .</p>
 
               <p style="text-align: center;">
                   <a class="button" href="#">Read More</a>
@@ -170,8 +168,7 @@
         <h5>Data Analysis</h5>
         <div class="pra">
             <img src="/dataanalysisistockrobuart.jpg" height="120px" width="120px">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, odio.
-                Saepe eligendi mollitia nam. Commodi sunt quas vero fuga asperiores.</p>
+            <p> i Analysis Data Perfectly.</p>
 
             <p style="text-align: center;">
                 <a class="button" href="#">Read More</a>
@@ -186,8 +183,7 @@
           <h5>Product Management</h5>
           <div class="pra">
             <img src="/product-mangement-lifecycle.jpg" height="120px" width="120px">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, odio.
-                  Saepe eligendi mollitia nam. Commodi sunt quas vero fuga asperiores.</p>
+              <p>i provide standard Product Management.</p>
 
               <p style="text-align: center;">
                   <a class="button" href="#">Read More</a>
