--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -59,7 +59,7 @@
             <li><a href="/services"> services</a></li>
             <li><a href="/contact"> contact</a></li>
       </ul>
-      <h2 class="logo"> TRIG<span>GER</span></h2>
+      <h2 class="logo"> DEV<span>TRIGGZ</span></h2>
     </div>
 </nav>
 
@@ -67,9 +67,9 @@
 <!-- Main Content -->
 <div class="jumbotron text-center">
     <h1 style="color: #f9004d;">Babajide's Portfolio Website </h1>
-    <p>"Story for the Gods!! "</br>
+    <p>"A Seasoner Web Developer "</br>
   
-    i’m currently learning Frontend frameworks (React and Vue), SQL, AWS Cloud Computing, FullStack development
+      I am a web developer, Multimedia Producer and a Occasional Videographer
     </p> 
   </div>
     
